--- a/IBMi-Editor/IBMi.Lib/IBMi.Lib.csproj
+++ b/IBMi-Editor/IBMi.Lib/IBMi.Lib.csproj
@@ -4,5 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="SSH.NET" Version="2016.1.0"/>
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.7.0"/>
+    <PackageReference Include="System.Data.Odbc" Version="4.7.0"/>
   </ItemGroup>
 </Project>
