--- a/Kanpachi/Kanpachi.CLI/Kanpachi.CLI.csproj
+++ b/Kanpachi/Kanpachi.CLI/Kanpachi.CLI.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <ItemGroup>
-    <ProjectReference Include="..\Kanpachi.Lib\Kanpachi.Lib.csproj" />
+    <ProjectReference Include="..\Kanpachi.Lib\Kanpachi.Lib.csproj"/>
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.8.0"/>
+  </ItemGroup>
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
 </Project>
