--- a/Kanpachi.Lib/Kanpachi.Lib.csproj
+++ b/Kanpachi.Lib/Kanpachi.Lib.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="System.Data.Odbc" Version="4.7.0"/>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
     <PackageReference Include="DeviceId" Version="5.1.1"/>
+    <PackageReference Include="ConsoleTables" Version="2.4.2"/>
   </ItemGroup>
 </Project>
